--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,8 @@
 @import "./components/section";
 @import "./components/welcome";
 @import "./components/button";
+@import "./components/champion";
+@import "./components/championCard";
 
 // TODO : RESET
 * {
